fix menu detail and add master product
